[gd_scene load_steps=23 format=2]

[ext_resource path="res://Sprites/Btn01.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Icons/Icon03.png" type="Texture" id=2]
[ext_resource path="res://Scripts/GUI/Gui.gd" type="Script" id=3]
[ext_resource path="res://GUI/clock.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Panel01.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Icons/Icon19.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Icons/Icon12.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Icons/Icon18.png" type="Texture" id=8]
[ext_resource path="res://Sprites/GEORGIAB.TTF" type="DynamicFontData" id=9]
[ext_resource path="res://Sprites/BAHNSCHRIFT.TTF" type="DynamicFontData" id=10]
[ext_resource path="res://Sprites/Icons/Icon07.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Icons/Icon15.png" type="Texture" id=12]
[ext_resource path="res://icon.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 10 )

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../../../MarginContainer3/Building/Button:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../../../MarginContainer/Tile/Button:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "flare_red"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.937255, 0.14902, 0.133333, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../../../MarginContainer3/Building/Button:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../../../MarginContainer/Tile/Button:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "flare_red"
tracks/0/type = "value"
tracks/0/path = NodePath("../../../MarginContainer/Tile/Button:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.937255, 0.14902, 0.133333, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../../../MarginContainer3/Building/Button:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../../../MarginContainer/Tile/Button:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "flare_red"
tracks/0/type = "value"
tracks/0/path = NodePath("../../../MarginContainer3/Building/Button:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.937255, 0.14902, 0.133333, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="GUI" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 3 )

[node name="Main" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2

[node name="StatusBar" type="HBoxContainer" parent="Main"]
margin_right = 1024.0
margin_bottom = 60.0

[node name="Background" type="Sprite" parent="Main/StatusBar"]
position = Vector2( 800, 25.84 )
rotation = 3.14159
scale = Vector2( 5, 3.053 )
texture = ExtResource( 5 )

[node name="Bars" type="VBoxContainer" parent="Main/StatusBar"]
margin_right = 876.0
margin_bottom = 60.0
size_flags_horizontal = 3

[node name="Bar1" type="HBoxContainer" parent="Main/StatusBar/Bars"]
margin_right = 876.0
margin_bottom = 24.0

[node name="Name" type="MarginContainer" parent="Main/StatusBar/Bars/Bar1"]
margin_right = 200.0
margin_bottom = 24.0

[node name="Background" type="NinePatchRect" parent="Main/StatusBar/Bars/Bar1/Name"]
margin_right = 200.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 20 )
texture = ExtResource( 1 )
region_rect = Rect2( -7, -4, 370, 64 )
patch_margin_top = 24

[node name="Title" type="TextureRect" parent="Main/StatusBar/Bars/Bar1/Name/Background"]
margin_left = 9.19238
margin_top = 5.65686
margin_right = 61.1924
margin_bottom = 53.6569
rect_scale = Vector2( 0.246554, 0.254111 )
texture = ExtResource( 2 )
stretch_mode = 4

[node name="Number" type="Label" parent="Main/StatusBar/Bars/Bar1/Name/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.2531
margin_top = 1.41422
margin_right = 10.2531
margin_bottom = 1.41422
rect_scale = Vector2( 0.910733, 0.93482 )
align = 2
valign = 1

[node name="Location" type="MarginContainer" parent="Main/StatusBar/Bars/Bar1"]
margin_left = 204.0
margin_right = 404.0
margin_bottom = 24.0

[node name="Background" type="NinePatchRect" parent="Main/StatusBar/Bars/Bar1/Location"]
margin_right = 200.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 20 )
texture = ExtResource( 1 )
region_rect = Rect2( -7, -4, 370, 64 )
patch_margin_top = 24

[node name="Title" type="TextureRect" parent="Main/StatusBar/Bars/Bar1/Location/Background"]
margin_left = 8.25
margin_top = 4.75
margin_right = 65.25
margin_bottom = 62.75
rect_scale = Vector2( 0.246554, 0.254111 )
texture = ExtResource( 8 )
stretch_mode = 4

[node name="Number" type="Label" parent="Main/StatusBar/Bars/Bar1/Location/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.2531
margin_top = 1.41422
margin_right = 10.2531
margin_bottom = 1.41422
rect_scale = Vector2( 0.910733, 0.93482 )
align = 2
valign = 1

[node name="Bar2" type="HBoxContainer" parent="Main/StatusBar/Bars"]
margin_top = 28.0
margin_right = 876.0
margin_bottom = 52.0

[node name="Building" type="MarginContainer" parent="Main/StatusBar/Bars/Bar2"]
margin_right = 300.0
margin_bottom = 24.0
grow_vertical = 0
rect_min_size = Vector2( 300, 0 )

[node name="Background" type="NinePatchRect" parent="Main/StatusBar/Bars/Bar2/Building"]
margin_right = 300.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 20 )
texture = ExtResource( 1 )
region_rect = Rect2( -7, -4, 370, 64 )
patch_margin_top = 24

[node name="Title" type="TextureRect" parent="Main/StatusBar/Bars/Bar2/Building/Background"]
margin_left = 10.9424
margin_top = 4.65686
margin_right = 67.9424
margin_bottom = 61.6569
rect_scale = Vector2( 0.246554, 0.254111 )
texture = ExtResource( 7 )
stretch_mode = 4

[node name="Number" type="Label" parent="Main/StatusBar/Bars/Bar2/Building/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.2531
margin_top = 1.41422
margin_right = 10.2531
margin_bottom = 1.41422
rect_scale = Vector2( 0.910733, 0.93482 )
align = 2
valign = 1

[node name="Contents" type="MarginContainer" parent="Main/StatusBar/Bars/Bar2"]
margin_left = 304.0
margin_right = 504.0
margin_bottom = 24.0

[node name="Background" type="NinePatchRect" parent="Main/StatusBar/Bars/Bar2/Contents"]
margin_right = 200.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 20 )
texture = ExtResource( 1 )
region_rect = Rect2( -7, -4, 370, 64 )
patch_margin_top = 24

[node name="Title" type="TextureRect" parent="Main/StatusBar/Bars/Bar2/Contents/Background"]
margin_left = 8.44238
margin_top = 4.15686
margin_right = 69.4424
margin_bottom = 65.1569
rect_scale = Vector2( 0.246554, 0.254111 )
texture = ExtResource( 6 )
stretch_mode = 4

[node name="Number" type="Label" parent="Main/StatusBar/Bars/Bar2/Contents/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.2531
margin_top = 1.41422
margin_right = 10.2531
margin_bottom = 1.41422
rect_scale = Vector2( 0.910733, 0.93482 )
align = 2
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Main/StatusBar"]
margin_left = 880.0
margin_right = 980.0
margin_bottom = 60.0

[node name="HBoxContainer" type="HBoxContainer" parent="Main/StatusBar/VBoxContainer"]
margin_right = 100.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )

[node name="Name2" type="MarginContainer" parent="Main/StatusBar/VBoxContainer/HBoxContainer"]
margin_right = 100.0
margin_bottom = 60.0

[node name="Background" type="NinePatchRect" parent="Main/StatusBar/VBoxContainer/HBoxContainer/Name2"]
margin_right = 100.0
margin_bottom = 60.0
rect_min_size = Vector2( 100, 20 )
texture = ExtResource( 1 )
region_rect = Rect2( -7, -4, 370, 64 )
patch_margin_top = 24

[node name="Title" type="TextureRect" parent="Main/StatusBar/VBoxContainer/HBoxContainer/Name2/Background"]
margin_left = 31.4899
margin_top = 6.10281
margin_right = 88.4899
margin_bottom = 63.1028
rect_scale = Vector2( 0.644134, 0.663877 )
texture = ExtResource( 7 )
stretch_mode = 4

[node name="Hour" type="Label" parent="Main/StatusBar/VBoxContainer/HBoxContainer/Name2/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.402
margin_top = 13.0
margin_right = 4.402
margin_bottom = 27.0
rect_scale = Vector2( 0.244948, 0.33562 )
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="Minute" type="Label" parent="Main/StatusBar/VBoxContainer/HBoxContainer/Name2/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 70.57
margin_top = 13.0
margin_right = 70.57
margin_bottom = 27.0
rect_scale = Vector2( 0.244948, 0.33562 )
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="Main/StatusBar"]
margin_left = 984.0
margin_right = 1024.0
margin_bottom = 60.0

[node name="Clock" type="NinePatchRect" parent="Main/StatusBar/MarginContainer"]
margin_right = 40.0
margin_bottom = 60.0
rect_min_size = Vector2( 40, 0 )

[node name="Time" type="VSlider" parent="Main/StatusBar/MarginContainer/Clock"]
margin_right = 16.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
min_value = 20.0
value = 60.0

[node name="TextureRect" type="TextureRect" parent="Main/StatusBar/MarginContainer/Clock"]
margin_left = 19.0
margin_top = 14.3382
margin_right = 49.0
margin_bottom = 48.3382
texture = ExtResource( 4 )
expand = true

[node name="HBoxContainer" type="HBoxContainer" parent="Main"]
margin_top = 64.0
margin_right = 1024.0
margin_bottom = 546.0
mouse_filter = 2
size_flags_vertical = 3

[node name="GUI_Selector" type="VBoxContainer" parent="Main/HBoxContainer"]
margin_right = 80.0
margin_bottom = 482.0
rect_min_size = Vector2( 80, 0 )

[node name="Background" type="Sprite" parent="Main/HBoxContainer/GUI_Selector"]
position = Vector2( 35.5967, 63.9944 )
rotation = -3.14159
scale = Vector2( 0.227969, 4.14688 )
texture = ExtResource( 5 )

[node name="MarginContainer2" type="MarginContainer" parent="Main/HBoxContainer/GUI_Selector"]
margin_right = 80.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
rect_pivot_offset = Vector2( -7.40623, 64 )

[node name="Character" type="NinePatchRect" parent="Main/HBoxContainer/GUI_Selector/MarginContainer2"]
margin_right = 80.0
margin_bottom = 30.0

[node name="Char" type="Label" parent="Main/HBoxContainer/GUI_Selector/MarginContainer2/Character"]
margin_left = 33.0
margin_top = 8.0
margin_right = 70.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 3 )
text = "Char"

[node name="Button" type="TextureButton" parent="Main/HBoxContainer/GUI_Selector/MarginContainer2/Character"]
margin_right = 26.0
margin_bottom = 30.0
rect_min_size = Vector2( 20, 30 )
texture_normal = ExtResource( 11 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Main/HBoxContainer/GUI_Selector/MarginContainer2/Character/Button"]
root_node = NodePath("../../../../MarginContainer2/Character/Button")
anims/RESET = SubResource( 8 )
anims/flare_red = SubResource( 9 )

[node name="MarginContainer" type="MarginContainer" parent="Main/HBoxContainer/GUI_Selector"]
margin_top = 34.0
margin_right = 80.0
margin_bottom = 64.0
rect_min_size = Vector2( 30, 30 )
rect_pivot_offset = Vector2( -7.40623, 64 )

[node name="Tile" type="NinePatchRect" parent="Main/HBoxContainer/GUI_Selector/MarginContainer"]
margin_right = 80.0
margin_bottom = 30.0

[node name="Tile" type="Label" parent="Main/HBoxContainer/GUI_Selector/MarginContainer/Tile"]
margin_left = 33.0
margin_top = 8.0
margin_right = 70.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 3 )
text = "Tile"

[node name="Button" type="TextureButton" parent="Main/HBoxContainer/GUI_Selector/MarginContainer/Tile"]
margin_right = 26.0
margin_bottom = 30.0
rect_min_size = Vector2( 20, 30 )
texture_normal = ExtResource( 8 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Main/HBoxContainer/GUI_Selector/MarginContainer/Tile/Button"]
root_node = NodePath("../../../../MarginContainer2/Character/Button")
anims/RESET = SubResource( 12 )
anims/flare_red = SubResource( 15 )

[node name="MarginContainer3" type="MarginContainer" parent="Main/HBoxContainer/GUI_Selector"]
margin_top = 68.0
margin_right = 80.0
margin_bottom = 68.0

[node name="Building" type="NinePatchRect" parent="Main/HBoxContainer/GUI_Selector/MarginContainer3"]
margin_right = 80.0

[node name="Build" type="Label" parent="Main/HBoxContainer/GUI_Selector/MarginContainer3/Building"]
margin_left = 33.0
margin_top = 8.0
margin_right = 70.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 3 )
text = "Build"

[node name="Button" type="TextureButton" parent="Main/HBoxContainer/GUI_Selector/MarginContainer3/Building"]
margin_right = 28.0
margin_bottom = 30.0
rect_min_size = Vector2( 20, 30 )
texture_normal = ExtResource( 12 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Main/HBoxContainer/GUI_Selector/MarginContainer3/Building/Button"]
root_node = NodePath("../../../../MarginContainer2/Character/Button")
anims/RESET = SubResource( 4 )
anims/flare_red = SubResource( 6 )

[node name="BottomBar" type="HBoxContainer" parent="Main"]
margin_top = 550.0
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2

[node name="MarginContainer2" type="MarginContainer" parent="Main/BottomBar"]
margin_right = 980.0
margin_bottom = 50.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="Main/BottomBar"]
margin_left = 984.0
margin_right = 1024.0
margin_bottom = 50.0
rect_min_size = Vector2( 30, 0 )
mouse_filter = 2
custom_constants/margin_bottom = 50

[node name="Demon" type="NinePatchRect" parent="Main/BottomBar/MarginContainer"]
margin_right = 40.0
rect_min_size = Vector2( 40, 0 )

[node name="Button" type="Button" parent="Main/BottomBar/MarginContainer/Demon"]
margin_left = -3.0
margin_top = -20.0
margin_right = 57.0
margin_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="Main/BottomBar/MarginContainer/Demon"]
margin_left = 2.0
margin_top = -15.0
margin_right = 52.0
margin_bottom = 35.0
mouse_filter = 2
texture = ExtResource( 13 )
expand = true

[connection signal="value_changed" from="Main/StatusBar/MarginContainer/Clock/Time" to="." method="_on_VSlider_value_changed"]
[connection signal="pressed" from="Main/HBoxContainer/GUI_Selector/MarginContainer2/Character/Button" to="." method="_on_Button_pressed"]
[connection signal="toggled" from="Main/HBoxContainer/GUI_Selector/MarginContainer2/Character/Button" to="." method="_on_Button_toggled"]
[connection signal="pressed" from="Main/HBoxContainer/GUI_Selector/MarginContainer3/Building/Button" to="." method="_on_Building_Button_pressed"]
